<resources>
    <string name="app_name">Tanuki Timer</string>
    <string name="textoBienvenidaPrincipal">Bienvenido a Tanuki Timer, elige un juego</string>
    <string name="tanuki_logo">Tanuki Logo</string>
    <string name="textoModo">Elige el modo de juego</string>
    <string name="btnCasual">Casual</string>
    <string name="btnTorneo">Torneo</string>
    <string name="textoTipoMitos">Formato de juego para Mitos y Leyendas</string>
    <string name="btnNuevaEra">Nueva Era</string>
    <string name="btnPBX">PBX</string>
    <string name="textoFormatoNuevaEra">Formato de juego para Nueva Era</string>
    <string name="textoMesaMitos">Ingresa el número de la mesa</string>
    <string name="mesaMitostext">Pulsa aquí</string>
    <string name="timer">Timer</string>
    <string name="buena_suerte">¡Buena suerte!</string>
    <string name="comenzar">COMENZAR</string>
    <string name="_00_10">00:10</string>
    <string name="www_tanukipuq_cl">www.tanukipuq.cl</string>
    <string name="era">Era</string>
    <string name="n_mero">Número</string>
    <string name="tanuki">TANUKI</string>
    <string name="timer_principal">TIMER</string>
    <string name="btnaceptar">btnAceptar</string>
    <string name="nueva">Nueva</string>
    <string name="de_mesa">de Mesa</string>
    <string name="n_mesa">N° Mesa:</string>
    <string name="jugador_1">Jugador 1:</string>
    <string name="jugador_2">Jugador 2:</string>
    <string name="formato">Formato</string>
    <string name="de_juego">de Juego</string>
    <string name="modo">Modo</string>
    <string name="_03_00">03:00</string>
    <string name="btnmitosyleyendas">btnMitosyLeyendas</string>
    <string name="btnvanguard">btnVanguard</string>
    <string name="btnpokemon">btnPokemon</string>
    <string name="btnfuria">btnFuria</string>
    <string name="btnimperio">btnImperio</string>
</resources>