<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mitos"
    tools:context=".Mitos.mitosPrincipal">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <ImageView
                android:layout_width="0sp"
                android:layout_height="120sp"
                android:layout_weight="1"
                android:src="@drawable/logo"
                android:contentDescription="@string/tanuki_logo" />
            <Space android:layout_width="250sp" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginRight="10sp"
                android:layout_marginLeft="10sp"
                android:text="@string/formato"
                android:textSize="60sp"
                android:textColor="@color/white"
                android:fontFamily="@font/archivo"
                />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:fontFamily="@font/condensed"
                android:text="@string/de_juego"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="50sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:layout_width="300sp"
                android:textAlignment="center"
                android:layout_marginRight="10sp"
                android:layout_marginLeft="10sp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/condensed"
                android:textColor="@color/white"
                android:text="@string/textoTipoMitos" />
        </TableRow>



        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            >

            <ImageButton
                android:id="@+id/btnNuevaEra"
                android:contentDescription="@string/btnNuevaEra"
                android:layout_width="200dp"
                android:layout_height="70sp"
                android:layout_marginTop="50sp"
                android:layout_marginBottom="20sp"
                android:background="@drawable/btnnuevaera"
                android:layout_marginLeft="50sp"
                android:layout_marginRight="50sp"/>
        </TableRow>



        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageButton
                android:id="@+id/btnPBX"
                android:contentDescription="@string/btnPBX"
                android:layout_width="200dp"
                android:layout_height="70sp"
                android:layout_marginTop="50sp"
                android:layout_marginBottom="20sp"
                android:textSize="30sp"
                android:fontFamily="@font/russo_one"
                android:textColor="@color/white"
                android:background="@drawable/btnpbx"
                android:layout_marginLeft="50sp"
                android:layout_marginRight="50sp" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>