<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mitos"
    tools:context=".Mitos.timerCasual">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="0sp"
                android:layout_height="120sp"
                android:layout_weight="1"
                android:contentDescription="@string/tanuki_logo"
                android:src="@drawable/logo" />

            <Space android:layout_width="250sp" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:fontFamily="@font/archivo"
                android:text="@string/timer"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="40sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:text="@string/buena_suerte"
                android:textAlignment="center"
                android:fontFamily="@font/condensed"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:ignore="TextSizeCheck" />
        </TableRow>


        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/timerTextViewCasual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40sp"
                android:layout_marginBottom="40sp"
                android:layout_marginRight="20sp"
                android:layout_marginLeft="20sp"
                android:textSize="80sp"
                android:textAlignment="center"
                android:text="@string/_00_10"
                android:textColor="@color/white"
                android:fontFamily="@font/russo_one"
                />

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageButton
                android:id="@+id/btnComenzarMesaMitosC"
                android:contentDescription="@string/comenzar"
                android:layout_width="200dp"
                android:layout_height="70sp"
                android:layout_marginLeft="50sp"
                android:layout_marginTop="50sp"
                android:layout_marginRight="50sp"
                android:textColor="@color/white"
                android:layout_marginBottom="20sp"
                android:background="@drawable/btncomenzarmitos" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>